feat(ITS_RCT): dev button componentn

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -59,15 +59,59 @@
   --rounded-full: #{$rounded-full};
   --spacing-0: #{$spacing-0};
   --spacing-1: #{$spacing-1};
+  --spacing-2: #{$spacing-2};
+  --spacing-3: #{$spacing-3};
+  --spacing-4: #{$spacing-4};
+  --spacing-5: #{$spacing-5};
   --spacing-6: #{$spacing-6};
+  --spacing-7: #{$spacing-7};
   --spacing-8: #{$spacing-8};
+  --spacing-9: #{$spacing-9};
   --spacing-10: #{$spacing-10};
+  --spacing-11: #{$spacing-11};
   --spacing-12: #{$spacing-12};
+  --spacing-13: #{$spacing-13};
   --spacing-14: #{$spacing-14};
+  --spacing-15: #{$spacing-15};
   --spacing-16: #{$spacing-16};
+  --spacing-17: #{$spacing-17};
+  --spacing-18: #{$spacing-18};
+  --spacing-19: #{$spacing-19};
   --spacing-20: #{$spacing-20};
+  --spacing-21: #{$spacing-21};
   --spacing-22: #{$spacing-22};
+  --spacing-23: #{$spacing-23};
   --spacing-24: #{$spacing-24};
+  --spacing-25: #{$spacing-25};
+  --spacing-26: #{$spacing-26};
+  --spacing-27: #{$spacing-27};
+  --spacing-28: #{$spacing-28};
+  --spacing-29: #{$spacing-29};
+  --spacing-30: #{$spacing-30};
+  --spacing-31: #{$spacing-31};
+  --spacing-32: #{$spacing-32};
+  --spacing-33: #{$spacing-33};
+  --spacing-34: #{$spacing-34};
+  --spacing-35: #{$spacing-35};
+  --spacing-37: #{$spacing-37};
+  --spacing-38: #{$spacing-38};
+  --spacing-39: #{$spacing-39};
+  --spacing-40: #{$spacing-40};
+  --spacing-41: #{$spacing-41};
+  --spacing-42: #{$spacing-42};
+  --spacing-43: #{$spacing-43};
+  --spacing-44: #{$spacing-44};
+  --spacing-45: #{$spacing-45};
+  --spacing-46: #{$spacing-46};
+  --spacing-47: #{$spacing-47};
+  --spacing-48: #{$spacing-48};
+  --spacing-49: #{$spacing-49};
+  --spacing-50: #{$spacing-50};
+  --spacing-51: #{$spacing-51};
+  --spacing-52: #{$spacing-52};
+  --spacing-53: #{$spacing-53};
+  --spacing-54: #{$spacing-54};
+  --spacing-55: #{$spacing-55};
   --shadow: #{$spacing-0} #{$spacing-8} #{$spacing-16} #{$spacing-0} rgb(0 0 0 / 9%);
   --shadow-md: #{$spacing-0} #{$spacing-12} #{$spacing-16} #{$spacing-0} rgb(0 0 0 / 9%);
   --shadow-lg: #{$spacing-0} #{$spacing-8} #{$spacing-24} #{$spacing-0} rgb(0 0 0 / 9%);
