--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -40,15 +40,60 @@ $line-height-none: 1;
 $rounded-full: 9999px;
 $spacing-0: 0;
 $spacing-1: 1px;
+$spacing-2: 2px;
+$spacing-3: 3px;
+$spacing-4: 4px;
+$spacing-5: 5px;
 $spacing-6: 6px;
+$spacing-7: 7px;
 $spacing-8: 8px;
+$spacing-9: 9px;
 $spacing-10: 10px;
+$spacing-11: 11px;
 $spacing-12: 12px;
+$spacing-13: 13px;
 $spacing-14: 14px;
+$spacing-15: 15px;
 $spacing-16: 16px;
+$spacing-17: 17px;
+$spacing-18: 18px;
+$spacing-19: 19px;
 $spacing-20: 20px;
+$spacing-21: 21px;
 $spacing-22: 22px;
+$spacing-23: 23px;
 $spacing-24: 24px;
+$spacing-25: 25px;
+$spacing-26: 26px;
+$spacing-27: 27px;
+$spacing-28: 28px;
+$spacing-29: 29px;
+$spacing-30: 30px;
+$spacing-31: 31px;
+$spacing-32: 32px;
+$spacing-33: 33px;
+$spacing-34: 34px;
+$spacing-35: 35px;
+$spacing-36: 36px;
+$spacing-37: 37px;
+$spacing-38: 38px;
+$spacing-39: 39px;
+$spacing-40: 40px;
+$spacing-41: 41px;
+$spacing-42: 42px;
+$spacing-43: 43px;
+$spacing-44: 44px;
+$spacing-45: 45px;
+$spacing-46: 46px;
+$spacing-47: 47px;
+$spacing-48: 48px;
+$spacing-49: 49px;
+$spacing-50: 50px;
+$spacing-51: 51px;
+$spacing-52: 52px;
+$spacing-53: 53px;
+$spacing-54: 54px;
+$spacing-55: 55px;
 $color-white-blue: #add8e6;
 $color-white-50: #93afab;
 $color-white-100: #95a5a0;
