fix(ITS_RCT): fix tag and swatch color

--- a/src/common/components/Atom/Tag/Tag.module.scss
+++ b/src/common/components/Atom/Tag/Tag.module.scss
@@ -71,6 +71,7 @@
     font-size: var(--spacing-20);
     line-height: var(--spacing-28);
     color: var(--color-content-tag);
+    max-width: 160px;
   }
 }
 
